log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 11:25:37 AM UTC: 
 tests:  0|6
total_score: 0/70
67b50e4
Fri 31 Mar 2023 11:34:57 AM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:17: error: expected ‘;’ before ‘return’
   18 |   vector->size=0
      |                 ^
      |                 ;
   19 |     return vector;
      |     ~~~~~~       
arraylist.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
80946d9
Fri 31 Mar 2023 11:35:03 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9101ce7
Fri 31 Mar 2023 11:46:51 AM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:23:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   23 |   if(l->data==NULL) return NULL;
      |                            ^~~~
arraylist.c:22:6: note: declared here
   22 | void append(ArrayList * l, void * data){
      |      ^~~~~~
arraylist.c:25:29: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   25 |     l->data=(void*) realloc(sizeof(void), l->capacity+2);
      |                             ^~~~~~~~~~~~
      |                             |
      |                             long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:25:13: error: ‘realloc’ called on a pointer to an unallocated object ‘1’ [-Werror=free-nonheap-object]
   25 |     l->data=(void*) realloc(sizeof(void), l->capacity+2);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
493c40d
Fri 31 Mar 2023 11:48:07 AM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:29: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   24 |     l->data=(void*) realloc(sizeof(void), l->capacity+2);
      |                             ^~~~~~~~~~~~
      |                             |
      |                             long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:24:13: error: ‘realloc’ called on a pointer to an unallocated object ‘1’ [-Werror=free-nonheap-object]
   24 |     l->data=(void*) realloc(sizeof(void), l->capacity+2);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f2a39cb
Fri 31 Mar 2023 11:50:13 AM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:21: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   24 |     l->data=realloc(sizeof(void), l->capacity+2);
      |                     ^~~~~~~~~~~~
      |                     |
      |                     long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:24:13: error: ‘realloc’ called on a pointer to an unallocated object ‘1’ [-Werror=free-nonheap-object]
   24 |     l->data=realloc(sizeof(void), l->capacity+2);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
63dcff6
Fri 31 Mar 2023 11:50:21 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:21: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   24 |     l->data=realloc(sizeof(void), l->capacity+2);
      |                     ^~~~~~~~~~~~
      |                     |
      |                     long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:24:13: error: ‘realloc’ called on a pointer to an unallocated object ‘1’ [-Werror=free-nonheap-object]
   24 |     l->data=realloc(sizeof(void), l->capacity+2);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
546e125
Fri 31 Mar 2023 11:50:51 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:21: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   24 |     l->data=realloc(sizeof(data), l->capacity*2);
      |                     ^~~~~~~~~~~~
      |                     |
      |                     long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:24:13: error: ‘realloc’ called on a pointer to an unallocated object ‘8’ [-Werror=free-nonheap-object]
   24 |     l->data=realloc(sizeof(data), l->capacity*2);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
62ca911
Fri 31 Mar 2023 11:51:07 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
47bef74
Fri 31 Mar 2023 11:51:34 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7664878
Fri 31 Mar 2023 11:52:55 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
03ba7f7
Fri 31 Mar 2023 11:54:52 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:31: error: expected ‘;’ before ‘l’
   24 |     l->capacity= l->capacity*2
      |                               ^
      |                               ;
   25 |     l->data=realloc(data, l->capacity);
      |     ~                          
Compilation failed
0d3f2c2
Fri 31 Mar 2023 11:54:58 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8cdd9d6
Fri 31 Mar 2023 11:56:19 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8985f52
Fri 31 Mar 2023 11:56:39 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
104523d
Fri 31 Mar 2023 11:57:12 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
caacae2
Fri 31 Mar 2023 11:58:30 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1acbed2
Fri 31 Mar 2023 11:58:56 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
864ff50
Fri 31 Mar 2023 11:59:44 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47719b4
Fri 31 Mar 2023 12:00:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:23:15: error: expected expression before ‘<’ token
   23 |   if(l->size >< l->capacity){
      |               ^
Compilation failed
56a03e9
